--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,16 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <script src="https://apis.google.com/js/api.js"></script>
+        <!-- <script
+            src="https://apis.google.com/js/platform.js"
+            async
+            defer
+        ></script> -->
+        <!-- <meta
+            name="google-signin-client_id"
+            content="%REACT_APP_CLIENT_ID%.apps.googleusercontent.com"
+        /> -->
         <title>Coin Companions</title>
     </head>
     <body>
